--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light bg-light">
-  <button style='background-color: #F8F9FA;color: green;border: red;'class="btn btn-primary btn-color" type="button" data-toggle="collapse" data-target="#global_nav" aria-expanded="false" aria-controls="collapseExample">
+  <button style='background-color: #F8F9FA;color: #E78140; border: transparent ;'class="btn btn-primary btn-color" type="button" data-toggle="collapse" data-target="#global_nav" aria-expanded="false" aria-controls="collapseExample">
      <i class="fa-solid fa-bars"></i>
   </button>
   <div class="collapse" id="global_nav">
