--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -155,6 +155,7 @@
   width: 70%;
  
   .order_link{
+  margin-top: 10px;
   font-size: 16px;
   word-break: break-all;
   width: 70%;
@@ -185,7 +186,10 @@
   }
   
 .tag_one{
-color: #575756;
+  a:link,
+  a:visited,
+  a:hover ,
+  a:active { color: #575756; }
 }
 
 .tab {
@@ -209,8 +213,8 @@ color: #575756;
 }
 
 .tab li.active a {
-  border-bottom: solid 3px blue;
-  color: blue;
+  border-bottom: solid 3px #4589B5;
+  color: #4589B5;
 }
 
 .area {
@@ -257,4 +261,41 @@ ul {
 .area li {
   padding: 10px; 
   border-bottom: 1px solid #ddd;
+}
+
+/*order show*/
+.title_area{
+  color: #575756;
+  border-bottom: 1px solid #ddd;
+  .title{
+ font-weight: bold;
+ font-size: 20px;
+ 
+  }
+  .status_and_icon{
+   .user_data{
+     display: flex;
+     text-align: right;
+     margin:0;
+     
+    .user_icon{
+    }
+    .user_name{
+     margin-right: 10px;
+   }
+  }
+ }
+ 
+ .date{
+ }
+}
+
+.order_body{
+  color: #575756;
+  border-bottom: 1px solid #ddd;
+}
+
+.suggestions{
+  margin-top: 40px;
+  border-bottom: 2px solid #FB8C00;
 }
