--- a/app/assets/stylesheets/suggestions.scss
+++ b/app/assets/stylesheets/suggestions.scss
@@ -1,3 +1,79 @@
-// Place all the styles related to the Suggestions controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.suggestion_form{
+  border: solid 3px #FB8C00;
+  border-radius: 10px;
+  margin : 40px 40px;
+  padding: 20px;
+}
+
+.title_form{
+  
+  width: 90%;
+}
+
+.body_form{
+  width: 90%;
+  .form-control{
+    resize: none;
+    height: 300px;
+
+  }
+}
+
+.price_form{
+  width: 90%;
+}
+
+.deadline_form{
+  width: 90%;
+}
+
+.file-input{
+  width: 90%;
+}
+
+.flex-end{
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+}
+
+.after_day{
+  width: 40px;
+}
+
+
+.btn-block{
+  position: relative;
+  width: 90%;
+  height: 40px;
+
+  .suggestion-btn{
+    font-size: 18px;
+    display: inline-block;
+  	margin: 10px auto 0 0;
+  	padding: .6em;
+  	line-height: 1;
+  	text-decoration: none;
+  	color: #FFFFFF;
+  	background-color: #E78140;
+  	border: 1px solid #E78140;
+  	border-radius: 0.3em;
+
+  }
+}
+.suggestion-btn:hover{
+  border: solid 1px #FFDBC9;
+  background: #FFDBC9;
+  
+}
+
+/*suggestion show*/
+.title_area{
+  color: #575756;
+  border-bottom: 1px solid #ddd;
+  .title{
+ font-weight: bold;
+ font-size: 20px;
+ 
+  }
+}
