--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,8 +1,37 @@
-.body_form{
+.comment_form{
+  margin: 20px;
   width: 90%;
   .form-control{
     resize: none;
-    height: 300px;
+    height: 150px;
 
   }
+}
+
+
+  .comment-btn{
+    width: 300px;
+    font-size: 18px;
+    display: inline-block;
+  	margin: 10px auto 0 0;
+  	padding: .6em;
+  	line-height: 1;
+  	text-decoration: none;
+  	color: #FFFFFF;
+  	background-color: #E78140;
+  	border: 1px solid #E78140;
+  	border-radius: 0.3em;
+  }
+.comment-btn:hover{
+  border: solid 1px #FFDBC9;
+  background: #FFDBC9;
+  
+}
+
+.comment_area{
+    width: 90%;
+    margin: 20px;
+  	border: 1px solid #ddd;
+  	border-radius: 0.3em;
+  
 }
