--- a/app/assets/stylesheets/suggestions.scss
+++ b/app/assets/stylesheets/suggestions.scss
@@ -77,3 +77,27 @@
  
   }
 }
+
+.order-submit-btn{
+  width: 400px;
+  font-size: 18px;
+	margin: 10px auto 0 0;
+	padding: 20px;
+	line-height: 1;
+	text-decoration: none;
+	color: #FFFFFF;
+	background-color: #E78140;
+	border: 1px solid #E78140;
+	border-radius: 0.3em;
+
+}
+
+.suggestion_body{
+  color: #575756;
+  border-bottom: 1px solid #ddd;
+}
+
+.btn-block{
+  margin: 10px 0 80px 0;
+  
+}
