--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -79,6 +79,7 @@
 	border: 1px solid #E78140;
 	border-radius: 2em;
   width: 32.987;
+  white-space: nowrap
 }
 
 .confirmed{
@@ -93,7 +94,7 @@
 	border: 1px solid #EEEEEE;
 	border-radius: 2em;
   width: 32.987;
-
+  white-space: nowrap
   
 }
 
