--- a/app/assets/stylesheets/suggestions.scss
+++ b/app/assets/stylesheets/suggestions.scss
@@ -28,7 +28,7 @@
 }
 
 .file-input{
-  width: 90%;
+  width: 70%;
 }
 
 .flex-end{
@@ -49,8 +49,9 @@
 
   .suggestion-btn{
     font-size: 18px;
-    display: inline-block;
-  	margin: 10px auto 0 0;
+    width: 90px;
+    display: block;
+  	margin: 10px auto 0 auto;
   	padding: .6em;
   	line-height: 1;
   	text-decoration: none;
@@ -98,6 +99,23 @@
 }
 
 .btn-block{
-  margin: 10px 0 80px 0;
+  margin: 10px auto 80px auto;
   
+}
+
+.order_forms{
+  margin: auto auto auto 25%;
+  .form-control{
+    width: 70%;
+  }
+}
+
+.deadline{
+  color: #575756;
+  margin-bottom: 40px;  
+}
+
+.price{
+  color: #575756;
+ 
 }
