--- a/app/views/orders/_order_form.html.erb
+++ b/app/views/orders/_order_form.html.erb
@@ -11,25 +11,22 @@
     </div>
   <% end %>
 
-  <div class="sell__block__f__name">
-    <div class="f-group__name">
-      <div class='title_f'>
-        <%= f.label 'タイトル' %>
-        <%= f.text_field :title,placeholder: "タイトルを入力してください",class: 'f-control' %>
-      </div>
-      <div class='body_f'>
-        <%= f.label 'オーダーの詳細' %>
-        <%= f.text_area :body,placeholder: "詳細な依頼内容を記入してください", class: 'f-control' %>
-      <div class="field">
-        <%= f.label "タグ (,で区切ると複数タグ登録できます)" %>
-        <%= f.text_field :name,value: @tag_list,class:"f-control"%>
-      </div>
+  <div class='order_forms'>
+    <div class='title'>
+      <%= f.label 'タイトル' ,class: 'form-label'%>
+      <%= f.text_field :title,placeholder: "タイトルを入力してください",class: 'form-control' %>
     </div>
-  </div>
-
-  <div class="images-field clearfix">
-    <div  class="field">
-      <%= f.label :images %>
+    <div class='input_order_body'>
+      <%= f.label 'オーダーの詳細' ,class: 'form-label'%>
+      <%= f.text_area :body,placeholder: "詳細な依頼内容を記入してください", class: 'form-control' %>
+    </div>
+    <div class="tag-field">
+      <%= f.label "タグ (,で区切ると複数タグ登録できます)" ,class: 'form-label'%>
+      <%= f.text_field :name,value: @tag_list,class:"form-control"%>
+    </div>
+  
+    <div  class="image-field">
+      <%= f.label '画像' ,class: 'form-label'%><br>
       <%= f.file_field :images, multiple: false, class: "file-input" %>
     </div>
     <% if @order.images.attached? %>
@@ -46,9 +43,8 @@
       <% end %>
     <% end %>
   </div>
-
   <div class="sell__block__f__btn">
-      <%= f.submit "オーダー送信",class: "btn-default__btn-red" %>
+      <%= f.submit "オーダー送信",class: "submit-btn" %>
   </div>
 
 <% end %>
