--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,8 +1,6 @@
-<% provide(:title, 'Sign up') %>
-<% provide(:button_text, 'Create my account') %>
-<h1>依頼作成</h1>
+<h1>オーダー作成</h1>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="center-block">
     <%= render 'order_form' %>
   </div>
 </div>
