--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,45 +1,49 @@
-<div class='title_area'>
-  <div vlass='status_and_icon'>
-    <div class='order_status'>
-     <% if @order.status =='pending' %>
-      <span class='pending'>受付中</span>
-     <% else%>
-      <span class='confirmed'>発注済</span>
-     <% end %>
+<div class="row">
+  <div class="center-block">
+    <div class='title_area'>
+      <div vlass='status_and_icon'>
+        <div class='order_status'>
+         <% if @order.status =='pending' %>
+          <span class='pending'>受付中</span>
+         <% else%>
+          <span class='confirmed'>発注済</span>
+         <% end %>
+        </div>
+        <% user = User.find(@order.user_id) %>
+        <div class='user_data'>
+          <%= link_to image_tag(user.avatar, class: "user_icon") %>
+          <%= link_to user.name, user,class: 'user_name' %>
+        </div>
+      </div>
+      <div class='title'><%= @order.title %></div>
+      <%= render 'shared/tag_index' %><br>
+      <span class='date'>投稿<%= @order.created_at.strftime('%Y/%m/%d') %></span>
     </div>
-    <% user = User.find(@order.user_id) %>
-    <div class='user_data'>
-      <%= link_to image_tag(user.avatar, class: "user_icon") %>
-      <%= link_to user.name, user,class: 'user_name' %>
-    </div>
+    <% if @order.images.attached? %>
+      <% @order.images.each do |image| %>
+        <%= link_to (image_tag display_image(image)) , image%>
+      <% end %>
+    <% end %>
+    <div class='order_label'>オーダーの内容</div>
+    <div class='order_body'><%= @order.body %></div>
+    
+    <% if logged_in? && @order.user_id == current_user.id && @order.status == 'pending'%>
+      <%= link_to 'オーダーを編集する', edit_order_path %>
+    <% end %>
+    
+    <div class='suggestions'>提案一覧</div>
+    <% @order.suggestions.each do |suggestion| %>
+      <%= link_to image_tag(User.find(suggestion.user_id).avatar, class: "user_icon") %><%= link_to suggestion.title, suggestion %><br>
+    <% end %>
+    
+    <% if @order.status == 'pending' %>
+      <% if !logged_in? %>
+        <div class=please_login>
+          ログインして提案しましょう
+        </div>
+      <% elsif !current_user?(User.find(@order.user_id))%>
+        <%= render '/suggestions/suggestion_form'  unless @order.suggestions.map(&:user_id).include?(current_user.id) %>
+      <% end %>
+    <% end %>
   </div>
-  <div class='title'><%= @order.title %></div>
-  <%= render 'shared/tag_index' %><br>
-  <span class='date'>投稿<%= @order.created_at.strftime('%Y/%m/%d') %></span>
 </div>
-<% if @order.images.attached? %>
-  <% @order.images.each do |image| %>
-    <%= link_to (image_tag display_image(image)) , image%>
-  <% end %>
-<% end %>
-<div class='order_label'>オーダーの内容</div>
-<div class='order_body'><%= @order.body %></div>
-
-<% if logged_in? && @order.user_id == current_user.id && @order.status == 'pending'%>
-  <%= link_to 'オーダーを編集する', edit_order_path %>
-<% end %>
-
-<div class='suggestions'>提案一覧</div>
-<% @order.suggestions.each do |suggestion| %>
-  <%= link_to image_tag(User.find(suggestion.user_id).avatar, class: "user_icon") %><%= link_to suggestion.title, suggestion %><br>
-<% end %>
-
-<% if @order.status == 'pending' %>
-  <% if !logged_in? %>
-    <div class=please_login>
-      ログインして提案しましょう
-    </div>
-  <% elsif !current_user?(User.find(@order.user_id))%>
-    <%= render '/suggestions/suggestion_form' %>
-  <% end %>
-<% end %>
