--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,10 @@
 <% provide(:title, 'Edit user') %>
-<% provide(:button_text, 'Save changes') %>
+<% provide(:button_text, '更新する') %>
 <%= javascript_pack_tag 'icon_loader',media: 'all'%>
 <%= render 'shared/error_messages', object: @user %>
 
-<h1>Update your profile</h1>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="center-block">
     <%= form_with(model: current_user, local: true) do |f| %>
       <div class='account-page__inner--icon'>
         <div class='account-page__inner--icon__label'>
@@ -19,19 +18,22 @@
         </div>
       </div>
       <div class='account-page__inner--user-form'>
-      <%= f.label 'プロフィール' %>
-      <%= f.text_field :profile, autocomplete: 'off', class: 'form-control' %>
+      <h2>ユーザー情報</h2>
+      <div class='profile'>
+        <%= f.label 'プロフィール' %>
+        <%= f.text_area :profile, autocomplete: 'off', class: 'form-control' %>
+      </div>
       
-      <%= f.label :name %>
+      <%= f.label 'ニックネーム' %>
       <%= f.text_field :name, class: 'form-control' %>
     
-      <%= f.label :email %>
+      <%= f.label 'メールアドレス' %>
       <%= f.email_field :email, class: 'form-control' %>
     
-      <%= f.label :password %>
+      <%= f.label 'パスワード' %>
       <%= f.password_field :password, class: 'form-control' %>
     
-      <%= f.label :password_confirmation %>
+      <%= f.label 'パスワード（確認用）' %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
       
       <h2>発送先情報</h2>
@@ -46,8 +48,8 @@
       
       <%= f.label 'TEL' %>
       <%= f.text_field :tel, class: 'form-control' %>
-
-      <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+      <div class='profile-btn-block'>
+        <%= f.submit yield(:button_text), class: "profile-btn",type: 'button', onclick: 'submit();' %>
       </div>
     <% end %>
   </div>
