--- a/app/assets/stylesheets/confirms.scss
+++ b/app/assets/stylesheets/confirms.scss
@@ -1,3 +1,28 @@
-// Place all the styles related to the Confirms controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.address-block{
+  display: block;
+  margin: 0 auto;
+  width: 80%;
+}
+
+.message_area{
+  margin-top: 30px;
+}
+
+.address-btn{
+  width: 300px;
+  font-size: 18px;
+  display: block;
+	margin: 10px auto 0 auto;
+	padding: .6em;
+	line-height: 1;
+	text-decoration: none;
+	color: #FFFFFF;
+	background-color: #E78140;
+	border: 1px solid #E78140;
+	border-radius: 0.3em;
+  
+  .address-btn:hover{
+    border: solid 1px #FFDBC9;
+    background: #FFDBC9;
+  } 
+}
