--- a/app/views/confirms/show.html.erb
+++ b/app/views/confirms/show.html.erb
@@ -1,39 +1,58 @@
-<div class='suggestion_title'>
-  <% user = User.find(@suggestion.user_id)%>
-  <% if user.avatar.present? %>
-    <h1><%= link_to image_tag(user.avatar, class: "user_icon") , user %><%= @suggestion.title %></h1>
-  <% end %>
-  <h1<%= @suggestion.title %></h1>
-</div>
-<% if @suggestion.images.attached? %>
-  <% @suggestion.images.each do |image| %>
-    <%= link_to (image_tag display_image(image)) , image %>
-  <% end %>
-<% end %>
-<div class='suggestion'>
-  <h2><%= @suggestion.body %></h2>
-  <h2>価格:<%= @suggestion.price %>円<h2>
-  <h2>受注から発送までの目安:<%= @suggestion.deadline %>日後<h2>
-  <%= link_to 'オーダーを見る', @order %>
-</div>
-<div class='address'>
-  <%= form_with(model: @confirm, local: true) do |f| %>
-    <h2>発送先情報</h2>
-    <%= f.label '受取人名' %>
-    <%= f.text_field :receiver_name, class: 'form-control' %>
+<div class="row">
+  <div class="center-block">
+    <div class='back_link'>
+      <%= link_to @order.title ,@order %>
+    </div>
     
-    <%= f.label :'郵便番号' %>
-    <%= f.text_field :postcode, class: 'form-control' %>
+    <% if logged_in? && @suggestion.user_id == current_user.id && @order.status == 'pending'%>
+      <%= link_to '提案を編集する', edit_suggestion_path %>
+    <% end %>
     
-    <%= f.label '住所' %>
-    <%= f.text_field :address, class: 'form-control' %>
-    
-    <%= f.label 'TEL' %>
-    <%= f.text_field :tel, class: 'form-control' %>
-  
-    <%= f.submit '配送先情報を更新する', class: "btn btn-primary" %>
-  <% end %>
+    <div class='title_area'>
+        <% user = User.find(@suggestion.user_id)%>
+        <% if user.avatar.present? %>
+          <div class='user_data'>
+            <%= link_to image_tag(user.avatar, class: "user_icon") , user %>
+            <%= link_to user.name,user ,class: "user_icon"%>
+          </div>
+        <% end %>
+        <div class='title'> <%= @suggestion.title %> </div>
+      <span class='date'>投稿<%= @order.created_at.strftime('%Y/%m/%d') %></span>
+    </div>
+    <% if @suggestion.images.attached? %>
+      <% @suggestion.images.each do |image| %>
+        <%= link_to (image_tag display_image(image)) , image %>
+      <% end %>
+    <% end %>
+    <div class='suggestion_body'><%= @suggestion.body %></div>
+    <div class='price'>価格:<%= @suggestion.price %>円</div>
+    <div class='deadline'>受注から発送までの目安:<%= @suggestion.deadline %>日後</div>
+      
+    <div class='address-block'>
+      <%= form_with(model: @confirm, local: true) do |f| %>
+        <h2>配送先情報</h2>
+        <%= f.label '受取人名' %>
+        <%= f.text_field :receiver_name, class: 'form-control' %>
+        
+        <%= f.label :'郵便番号' %>
+        <%= f.text_field :postcode, class: 'form-control' %>
+        
+        <%= f.label '住所' %>
+        <%= f.text_field :address, class: 'form-control' %>
+        
+        <%= f.label 'TEL' %>
+        <%= f.text_field :tel, class: 'form-control' %>
+      
+        <%= f.submit '配送先情報を更新する', class: "address-btn" %>
+      <% end %>
+    </div>
+    <div class='message_area'>
+      <%= User.find(@suggestion.user_id).name %>さんとのメッセージ
+      <div class='comment_area'>
+        <%= render @confirm.messages %>
+      </div>
+
+      <%= render '/messages/message_form' %>
+    </div>
+  </div>
 </div>
-<h3>メッセージ</h3>
-<%= render '/messages/message_form' %>
-<%= render @confirm.messages %>
