--- a/app/assets/stylesheets/confirms.scss
+++ b/app/assets/stylesheets/confirms.scss
@@ -26,3 +26,14 @@
     background: #FFDBC9;
   } 
 }
+
+.address-info{
+   display: flex;
+ .shipping_label{
+   font-weight: bold;
+   height: 60px;
+ }
+}
+.shipping{
+  color: #575756;
+ }
