--- a/app/views/suggestions/edit.html.erb
+++ b/app/views/suggestions/edit.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 <h1>提案編集</h1>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="center-block">
     <%= render 'suggestion_form' %>
   </div>
 </div>
