--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -6,16 +6,12 @@
 }
 
 .confirmed_orders{
-  margin:auto auto ;
-  
-  display:flex;
-  width: fit-content;
-  background: white;
-  border: 3px solid #f4f3f2;
-	border-radius: 2em;
+
+
 }
 .order_label{
   background: #f4f3f2;
+  margin-bottom: 10px;
 }
 .label_and_orders{
   margin: 5px 20px;
@@ -99,14 +95,15 @@
 }
 
 .order_index{
-  	border-top: 1px solid #EEEEEE;
+  	border-bottom: 1px solid #EEEEEE;
+  	margin-top:20px;
   	font-size: 14px;
   	font-weight: 900;
   	display: flex;
-  	height: 60px;
+  	height: 90px;
 }
 
-.order_index_flame{
+.order_index_frame{
 	padding: .6em;
 	line-height: 1;
 	text-decoration: none;
@@ -142,33 +139,22 @@
 	border: 1px solid #FFDBC9;
 }
 
-.user_info{
- margin-left: auto;
- display:flex;
- .user_info_name{
-   margin-bottom: 0px;
-   margin-top:auto;
- }
-}
+
 .order_index_mid{
-  position: relative;
-  display: block;
+  display: flex;
+  flex-flow: column;
   width: 70%;
  
   .order_link{
-  margin-top: 10px;
+    margin: 30px 0 10px 10px;
   font-size: 16px;
   word-break: break-all;
-  width: 70%;
   }
 
 /*タグ*/
   .tags{
-      position: absolute;
     	word-break: keep-all;
-      bottom: 0;
-      left: 0;
-      display: inline-block;
+
   }
 }
 
@@ -222,7 +208,7 @@
   display: none;
   opacity: 0;
   background: #fff;
-  padding:50px 20px;
+  width: 100%;
 }
 
 .area.is-active {
@@ -235,7 +221,7 @@
 @keyframes displayAnime {
 
   from {
-    opacity: 0;
+    opacity: 1;
   }
 
   to {
@@ -264,6 +250,10 @@ ul {
   border-bottom: 1px solid #ddd;
 }
 
+
+.order_detail_link{
+  margin-bottom: 3px;
+}
 /*order show*/
 .title_area{
   color: #575756;
@@ -280,15 +270,33 @@ ul {
      margin:0;
      
     .user_icon{
+      display: flex;
+      bottom: 0;
     }
     .user_name{
      margin-right: 10px;
    }
   }
  }
- 
- .date{
+}
+
+.right_block{
+  display:flex;
+  justify-content:flex-end;
+  flex-flow: column;
+ .user_info{
+     display: flex;
+
+   .user_info_icon{
+     margin-bottom: 1px;
+     margin-top: auto ;
+   }
+   .user_info_name{
+     margin-bottom: 4px;
+     margin-top: auto;
+   }
  }
+ 
 }
 
 .order_body{
@@ -329,4 +337,17 @@ ul {
     resize: none;
     
   }
+}
+
+.order_detail_link{
+  margin-top: 20px;
+}
+
+
+.order_detail{
+  color: #FB8C00 !important ;
+  background: #FFFFFF;
+  border: 1px solid #FB8C00;
+  border-radius: 0.3em;
+  padding: 0 8px;
 }
