--- a/app/views/orders/my_orders.html.erb
+++ b/app/views/orders/my_orders.html.erb
@@ -13,14 +13,15 @@
     </ul>
 
   <% if current_user?(@user) %>
-    <div class="confirmed_orders">
+  <div class='order_index_frame'>
+
      <div id="make" class="area">
-      <div class ='label_and_orders'>
-        <div class ='my_suggested_orders'>
+
           <div class='order_label'><%= @user.name %>さんの受注済みオーダー (<%= @confirmed_orders.count %>)</div>
           <ol class="confirmed_orders">
             <% @confirmed_orders.each do |ordar| %>
-              <%= link_to ordar.title ,ordar %><%= link_to '注文ページへ' ,  Confirm.find_by(order_id: ordar.id) %><br>
+              <%= render ordar %>
+
             <% end %>
           </ol>
           <div class='order_label'><%= @user.name %>さんの提案中のオーダー (<%= @pending_orders.count %>)</div>
@@ -29,7 +30,7 @@
               <%= link_to ordar.title ,ordar %><br>
             <% end %>
           </ol>
-        </div>
+
       </div>
     </div>
     <div id="order" class="area">      
@@ -47,8 +48,7 @@
               <%= link_to ordar.title ,ordar %><br>
             <% end %>
           </ol>
-      </div>
     </div>
-  </div>
 
+</div>
   <% end %>
