--- a/app/views/suggestions/_suggestion_form.html.erb
+++ b/app/views/suggestions/_suggestion_form.html.erb
@@ -35,7 +35,7 @@
       </div>
     </div>
     
-    <div class="image-field">
+    <div class="images-field">
       <div  class="image_label">
         <%= f.label '画像' %><br>
         <%= f.file_field :images, multiple: false, class: "file-input" %>
