--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -6,7 +6,9 @@
 a:link,
 a:visited,
 a:hover ,
-a:active { color: #4589B5; }
+a:active { color: #4589B5;
+          text-decoration: none;
+}
 
 body {
   padding-top: 70px;
