--- a/app/views/orders/_order_form.html.erb
+++ b/app/views/orders/_order_form.html.erb
@@ -25,7 +25,7 @@
       <%= f.text_field :name,value: @tag_list,class:"form-control"%>
     </div>
   
-    <div  class="images-field">
+    <div  class="order_images-field">
       <%= f.label '画像' ,class: 'form-label'%><br>
       <%= f.file_field :images, multiple: false, class: "file-input" %>
     </div>
