--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -20,3 +20,34 @@
 	border: 1px solid #E78140;
 	border-radius: 0.3em;
 }
+
+.account-page__inner--user-form{
+  display: block;
+  width: 60% ;
+  margin: auto;
+  .form-label{
+    margin: 0 auto;
+  }
+  
+  .form-block{
+      width: 400px;
+        margin: 0 auto;
+    .form-control{
+
+    }
+  }
+}
+
+  .btn-create{
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    width: 200px;
+    padding: .6em;
+  	line-height: 1;
+  	text-decoration: none;
+  	color: #FFFFFF;
+  	background-color: #E78140;
+  	border: 1px solid #E78140;
+  	border-radius: 0.3em;
+  }
