--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
 <%= javascript_pack_tag 'icon_loader',media: 'all'%>
 <%= render 'shared/error_messages', object: @user %>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="center-block">
     <%= form_with(model: @user, local: true) do |f| %>
       <div class='account-page__inner--icon'>
         <div class='account-page__inner--icon__label'>
@@ -12,17 +12,23 @@
           <%= f.file_field :avatar, class: 'account-page__inner--icon__input__btn', id: 'upload-icon' %>
         </div>
       </div>
-  <%= f.label :name %>
-  <%= f.text_field :name, class: 'form-control' %>
-
-  <%= f.label :email %>
-  <%= f.email_field :email, class: 'form-control' %>
-
-  <%= f.label :password %>
-  <%= f.password_field :password, class: 'form-control' %>
-
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation, class: 'form-control' %>
-
-  <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+    <div class='account-page__inner--user-form'>
+      <div class='form-block'>
+        <%= f.label :name ,class: 'form-label' %>
+        <%= f.text_field :name, class: 'form-control' %>
+      </div>
+      <div class='form-block'>
+        <%= f.label :email ,class: 'form-label' %>
+        <%= f.email_field :email, class: 'form-control' %>
+      </div>
+      <div class='form-block'>
+        <%= f.label :password ,class: 'form-label' %>
+        <%= f.password_field :password, class: 'form-control' %>
+      </div>
+      <div class='form-block'>  
+        <%= f.label :password_confirmation ,class: 'form-label' %>
+        <%= f.password_field :password_confirmation, class: 'form-control' %>
+      </div>
+      <%= f.submit 'アカウント作成', class: "btn-create" %>
+  </div>
 <% end %>
