--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -24,7 +24,7 @@
         <%= f.text_area :profile, autocomplete: 'off', class: 'form-control' %>
       </div>
       
-      <%= f.label 'ニックネーム' %>
+      <%= f.label 'ユーザー名' %>
       <%= f.text_field :name, class: 'form-control' %>
     
       <%= f.label 'メールアドレス' %>
