--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Sign up') %>
+<% provide(:title, '会員登録') %>
 <% provide(:button_text, 'Create my account') %>
 <%= javascript_pack_tag 'icon_loader',media: 'all'%>
-<h1>Sign up</h1>
+<h1>会員登録</h1>
 <%= render 'form' %>
