--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,19 +14,19 @@
       </div>
     <div class='account-page__inner--user-form'>
       <div class='form-block'>
-        <%= f.label :name ,class: 'form-label' %>
+        <%= f.label 'ユーザー名' ,class: 'form-label' %>
         <%= f.text_field :name, class: 'form-control' %>
       </div>
       <div class='form-block'>
-        <%= f.label :email ,class: 'form-label' %>
+        <%= f.label 'メールアドレス' ,class: 'form-label' %>
         <%= f.email_field :email, class: 'form-control' %>
       </div>
       <div class='form-block'>
-        <%= f.label :password ,class: 'form-label' %>
+        <%= f.label 'パスワード' ,class: 'form-label' %>
         <%= f.password_field :password, class: 'form-control' %>
       </div>
       <div class='form-block'>  
-        <%= f.label :password_confirmation ,class: 'form-label' %>
+        <%= f.label 'パスワード（確認用）' ,class: 'form-label' %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
       <%= f.submit 'アカウント作成', class: "btn-create" %>
